<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">

        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <ImageView

                android:id="@+id/imageView"
                style="@style/ImageViewForm"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:src="@drawable/logo_fitness_track" />

            <View
                android:id="@+id/menu"
                style="@style/ViewForm"
                android:background="@drawable/background_menu" />


            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:layout_marginBottom="200dp"
                android:src="@drawable/vector_imc_white" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="30dp"
                android:layout_marginBottom="40dp"
                android:fontFamily="@font/raleway_medium"
                android:text="@string/imc_desc"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="580dp"
                android:gravity="center"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/edit_imc_weight"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_gravity="center"
                    android:layout_marginStart="30dp"
                    android:layout_marginEnd="30dp"
                    android:layout_marginBottom="40dp"
                    android:background="@drawable/background_entry"
                    android:drawableStart="@drawable/vector_weight"
                    android:drawablePadding="10dp"
                    android:drawableTint="#D3D3D3"
                    android:fontFamily="@font/raleway"
                    android:hint="@string/weight"
                    android:inputType="number"
                    android:maxLength="3"
                    android:paddingStart="10dp"
                    android:textColorHint="#D3D3D3"
                    tools:ignore="RtlSymmetry" />

                <EditText
                    android:id="@+id/edit_imc_height"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_gravity="center"
                    android:layout_marginStart="30dp"
                    android:layout_marginEnd="30dp"
                    android:layout_marginBottom="40dp"
                    android:background="@drawable/background_entry"
                    android:drawableStart="@drawable/vector_height"
                    android:drawablePadding="10dp"
                    android:drawableTint="#D3D3D3"
                    android:fontFamily="@font/raleway"
                    android:hint="@string/height"
                    android:inputType="number"
                    android:maxLength="3"
                    android:paddingStart="16dp"
                    android:textColorHint="#D3D3D3" />

                <Button
                    android:id="@+id/btn_imc_send"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:backgroundTint="@color/white"
                    android:fontFamily="@font/raleway_bold"
                    android:text="@string/calc"
                    android:textColor="#50BEED" />

            </LinearLayout>

        </FrameLayout>

    </LinearLayout>

</ScrollView>